Inclusão de título:parceiro,time e contato

--- a/index.html
+++ b/index.html
@@ -45,16 +45,17 @@
             </section>
 
             <section id="parceiros">
+                <h2>PARCEIROS</h2>
                 <p>
                     Quem são nossos parceiros
                 </p>
               <div>     
                   <img src="img/Parceiros.jpg" width="300px">
               </div>
-
             </section>
 
             <section id="time">
+                <h2>TIME</h2>
                 <p>
                     Nossos parceiros
                 </p>
@@ -62,6 +63,7 @@
                     <img src="img/Time.jpg" width="300px">
                 </div>
             <section id=contato>
+                <h2>CONTATO</h2>
                 <p> 
                     Dúvidas? Entre em contato
                 </p>
