Alteração de frases das sections e correção de problemas

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
                    <ul>
                         <li><a href="#serviços">SERVIÇOS</a></li>
                         <li><a href="#clientes">CLIENTES</a></li>
-                        <li><a href="#Parceiros">PARCEIROS</a></li>
-                        <li><a href="#Time">TIME</a></li>
-                        <li><a href="#Contato">CONTATO</a></li>
+                        <li><a href="#parceiros">PARCEIROS</a></li>
+                        <li><a href="#time">TIME</a></li>
+                        <li><a href="#contato">CONTATO</a></li>
                    </ul>
             </nav>
     
