Alteração da section contato. Inclusão de lin email

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <section id="parceiros">
                 <h2>PARCEIROS</h2>
                 <p>
-                    Quem são nossos parceiros
+                    Nossos parceiros nos ajudam a agregar valor ao seu produto
                 </p>
               <div>     
                   <img src="img/Parceiros.jpg" width="300px">
@@ -57,7 +57,7 @@
             <section id="time">
                 <h2>TIME</h2>
                 <p>
-                    Nossos parceiros
+                    Nosso time trabalha com empenho para entregar o melhor produto para nossos clientes
                 </p>
                 <div>
                     <img src="img/Time.jpg" width="300px">
@@ -65,10 +65,12 @@
             <section id=contato>
                 <h2>CONTATO</h2>
                 <p> 
-                    Dúvidas? Entre em contato
+                    Dúvidas? Entre em contato com nossa equipe.
                 </p>
                 <div>
-                    <img src="img/cellphone-cellular-communication-connection-263564.jpg" width="300px">
+                    <img src="img/email.png" width="200px">
+                    <p><a href="mailito">contato@empresa.com"</a></p>
+
                 </div>
             </section>    
 
