Alteração da section contato. Inclusão de telefone

--- a/index.html
+++ b/index.html
@@ -68,8 +68,12 @@
                     Dúvidas? Entre em contato com nossa equipe.
                 </p>
                 <div>
-                    <img src="img/email.png" width="200px">
-                    <p><a href="mailito">contato@empresa.com"</a></p>
+                    <img src="img/email.png" width="40px">
+                    <p><a href="mailto:contato@empresa.com">contato@empresa.com</a></p>
+                </div>
+                <div>
+                    <img src="img/telefone.png" width="50px">
+                    <p><a href="tel:999999999">(11)99999-9999</a></p>
 
                 </div>
             </section>    
