Alteração section parceiros. Inclusão de link

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <header>
                 <h1>Minha Primeira Página</h1>
                 <p>
-                 Oferecemos o desenvolvimento dos melhores sites e apps para sua empresa
+                    Oferecemos o desenvolvimento dos melhores sites e apps para sua empresa
                 </p>
             </header>
             
@@ -50,7 +50,9 @@
                     Nossos parceiros nos ajudam a agregar valor ao seu produto
                 </p>
               <div>     
-                  <img src="img/Parceiros.jpg" width="300px">
+                  <a href="https://digitalinnovation.one/" target="_blank">
+                    <img src="img/digitalinovation.png" width="300px">
+                  </a>
               </div>
             </section>
 
