Inclusão de arquivo css. Backgroud

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <head> 
             <meta charset="utf-8">
             <title>Minha Página</title>
+            <link rel="stylesheet" type="text/css" href="css/style.css">
         </head>
     
         <body>
@@ -53,7 +54,7 @@
                   <a href="https://digitalinnovation.one/" target="_blank">
                     <img src="img/digitalinovation.png" width="300px">
                   </a>
-              </div>
+              </div> 
             </section>
 
             <section id="time">
