Inclusão img padrão e img contato

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     Oferecemos o desenvolvimento dos melhores sites e apps para sua empresa
                 </p>
                 <div>
-                    <img src="img/serviços.jpg" width="300px">
+                    <img src="img/serviços.jpg" width="300px" class="img_padrao">
                 </div>
                     
             </section>
@@ -41,7 +41,7 @@
                     Nossos clientes ficaram muito satisfeitos com nosso serviços
                 </P>
                 <div>
-                    <img src="img/clientes2.jpg" width="300px">
+                    <img src="img/clientes2.jpg" width="300px" class="img_padrao">
                 </div>
             </section>
 
@@ -52,7 +52,7 @@
                 </p>
               <div>     
                   <a href="https://digitalinnovation.one/" target="_blank">
-                    <img src="img/digitalinovation.png" width="300px">
+                    <img src="img/digitalinovation.png" width="300px" class="img_padrao">
                   </a>
               </div> 
             </section>
@@ -63,7 +63,7 @@
                     Nosso time trabalha com empenho para entregar o melhor produto para nossos clientes
                 </p>
                 <div>
-                    <img src="img/Time.jpg" width="300px">
+                    <img src="img/Time.jpg" width="300px" class="img_padrao">
                 </div>
             <section id=contato>
                 <h2>CONTATO</h2>
@@ -71,11 +71,11 @@
                     Dúvidas? Entre em contato com nossa equipe.
                 </p>
                 <div>
-                    <img src="img/email.png" width="40px">
+                    <img src="img/email.png" width="40px" class="img_contato">
                     <p><a href="mailto:contato@empresa.com">contato@empresa.com</a></p>
                 </div>
                 <div>
-                    <img src="img/telefone.png" width="50px">
+                    <img src="img/telefone.png" width="50px" class="img_contato">
                     <p><a href="tel:999999999">(11)99999-9999</a></p>
 
                 </div>
